--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,17 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <p>Day 1: My very first CSS animation</p>
+      <div class="box">
+        <span class="circle"></span>
+      </div>
+
+    </div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
